--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        working-directory: ./docs
         with:
+          cache-dependency-path: docs/yarn.lock
           node-version: 18
           cache: yarn
       - name: Install dependencies
