--- a/.github/workflows/docs-test-deploy.yml
+++ b/.github/workflows/docs-test-deploy.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        working-directory: ./docs
         with:
           node-version: 18
           cache: yarn
+          cache-dependency-path: docs/yarn.lock
       - name: Install dependencies
         working-directory: ./docs
         run: yarn install --frozen-lockfile
