docs builder runs only when docs are mutated

--- a/.github/workflows/docs-test-deploy.yml
+++ b/.github/workflows/docs-test-deploy.yml
@@ -2,6 +2,8 @@ name: Test Docs Deployment
 
 on:
   pull_request:
+    paths:
+      - docs/**
     branches:
       - master
     # Review gh actions docs if you want to further define triggers, paths, etc
