--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -2,6 +2,8 @@ name: Deploy Docs to GitHub Pages
 
 on:
   push:
+    paths:
+      - docs/**
     branches:
       - master
     # Review gh actions docs if you want to further define triggers, paths, etc
