--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Docs to GitHub Pages
 on:
   push:
     paths:
-      - docs/**
+      - dev/docs/**
     branches:
       - master
     # Review gh actions docs if you want to further define triggers, paths, etc
@@ -17,20 +17,20 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          cache-dependency-path: docs/yarn.lock
+          cache-dependency-path: dev/docs/yarn.lock
           node-version: 18
           cache: yarn
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-        working-directory: ./docs
+        working-directory: ./dev/docs
       - name: Build website
         run: yarn build
-        working-directory: ./docs
+        working-directory: ./dev/docs
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/build
+          publish_dir: ./dev/docs/build
           # The following lines assign commit authorship to the official
           # GH-Actions bot for deploys to `gh-pages` branch:
           # https://github.com/actions/checkout/issues/13#issuecomment-724415212
