--- a/cmd/testing/stand/host.env
+++ b/cmd/testing/stand/host.env
@@ -1,6 +1,6 @@
 REDIS_HOST=127.0.1.1
 REDIS_PORT=6380
-MONGO_HOST=127.0.1.1
+MONGO_HOST=localhost
 MONGO_PORT=27018
 POSTGRES_HOST=127.0.1.1
 POSTGRES_PORT=5435
