router + multiple executors

--- a/cmd/testing/stand/docker-compose.yml
+++ b/cmd/testing/stand/docker-compose.yml
@@ -105,37 +105,37 @@ services:
     volumes:
       - kantoku-testing-mongodb:/data/db
 
-#  redis:
-#    image: redis
-#    container_name: kantoku-testing-redis
-#    ports:
-#      - "6380:6379"
-#    volumes:
-#      - kantoku-testing-redis:/data
-#
-#  postgres:
-#    image: postgres
-#    container_name: kantoku-testing-postgres
-#    environment:
-#      POSTGRES_DB: postgres
-#      POSTGRES_USER: postgres
-#      POSTGRES_PASSWORD: postgres
-#    ports:
-#      - "5435:5432"
-#    volumes:
-#      - kantoku-testing-postgres:/var/lib/postgresql/data
-#  nats:
-#    image: nats:latest
-#    container_name: nats-server
-#    ports:
-#      - "4222:4222"
-#      - "6222:6222"
-#      - "8222:8222"
-#    volumes:
-#      - kantoku-testing-nats:/nats/data
-#    restart: always
+  redis:
+    image: redis
+    container_name: kantoku-testing-redis
+    ports:
+      - "6380:6379"
+    volumes:
+      - kantoku-testing-redis:/data
+
+  postgres:
+    image: postgres
+    container_name: kantoku-testing-postgres
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5435:5432"
+    volumes:
+      - kantoku-testing-postgres:/var/lib/postgresql/data
+  nats:
+    image: nats:latest
+    container_name: nats-server
+    ports:
+      - "4222:4222"
+      - "6222:6222"
+      - "8222:8222"
+    volumes:
+      - kantoku-testing-nats:/nats/data
+    restart: always
 volumes:
   kantoku-testing-mongodb:
-#  kantoku-testing-redis:
-#  kantoku-testing-postgres:
-#  kantoku-testing-nats:
+  kantoku-testing-redis:
+  kantoku-testing-postgres:
+  kantoku-testing-nats:
