--- a/cmd/testing/stand/host.env
+++ b/cmd/testing/stand/host.env
@@ -1,10 +1,10 @@
-REDIS_HOST=127.0.1.1
+REDIS_HOST=localhost
 REDIS_PORT=6380
 MONGO_HOST=localhost
 MONGO_PORT=27018
-POSTGRES_HOST=127.0.1.1
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5435
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 NATS_URL=nats://localhost:4222
-API_HOST=127.0.1.1
+API_HOST=localhost
