--- a/cmd/testing/stand/docker-compose.yml
+++ b/cmd/testing/stand/docker-compose.yml
@@ -97,6 +97,7 @@ services:
 #      - "8500:8500"  # UI and HTTP API
 #      - "8600:8600/udp"  # DNS interface
 #    command: "agent -dev -client=0.0.0.0"
+
   mongodb:
     image: mongo
     container_name: kantoku-testing-mongodb
@@ -104,7 +105,6 @@ services:
       - "27018:27017"
     volumes:
       - kantoku-testing-mongodb:/data/db
-
   redis:
     image: redis
     container_name: kantoku-testing-redis
@@ -112,7 +112,6 @@ services:
       - "6380:6379"
     volumes:
       - kantoku-testing-redis:/data
-
   postgres:
     image: postgres
     container_name: kantoku-testing-postgres
@@ -124,16 +123,15 @@ services:
       - "5435:5432"
     volumes:
       - kantoku-testing-postgres:/var/lib/postgresql/data
-  nats:
-    image: nats:latest
-    container_name: nats-server
-    ports:
-      - "4222:4222"
-      - "6222:6222"
-      - "8222:8222"
-    volumes:
-      - kantoku-testing-nats:/nats/data
-    restart: always
+#  nats:
+#    image: nats:latest
+#    container_name: nats-server
+#    ports:
+#      - "4222:4222"
+#      - "6222:6222"
+#      - "8222:8222"
+#    volumes:
+#      - kantoku-testing-nats:/nats/data
 volumes:
   kantoku-testing-mongodb:
   kantoku-testing-redis:
