--- a/pkg/lib/gateway/web/app/package.json
+++ b/pkg/lib/gateway/web/app/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@dagrejs/dagre": "^1.1.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
@@ -19,6 +20,7 @@
     "@refinedev/kbar": "^1.3.5",
     "@refinedev/react-router-v6": "^4.5.5",
     "@refinedev/simple-rest": "^5.0.1",
+    "@xyflow/react": "^12.1.1",
     "antd": "^5.0.5",
     "cytoscape-cise": "^1.0.0",
     "cytoscape-cola": "^2.5.1",
